Fix many memory leaks in chrome/browser/ui/cocoa/omnibox.

Each time I type or delete a character from the omnibox, UpdatePopupApperance is
called at least 3 times. Each call to OmniboxPopupViewMac::UpdatePopupApperance
was leaking an NSViewController*, as well as all omnibox results.

BUG=636632

Review-Url: https://codereview.chromium.org/2233123003
Cr-Commit-Position: refs/heads/master@{#411637}

Former-commit-id: b87e1820a06ac5dd1d9881be5342286fac920e43